--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
   },
   "homepage": "https://github.com/MrDarkSkil/module-template#readme",
   "dependencies": {
-    "fs": "0.0.1-security",
-    "html-loader": "^0.5.5",
-    "vue": "^2.5.17"
+    "elios-sdk": "0.0.3"
   },
   "devDependencies": {
     "@types/node": "^10.3.1",
+    "html-loader": "^0.5.5",
     "css-loader": "^1.0.0",
     "html-css-obfuscator": "^1.0.0",
     "mini-css-extract-plugin": "^0.4.2",
@@ -35,8 +34,6 @@
     "style-loader": "^0.23.0",
     "ts-loader": "^4.2.0",
     "typescript": "^2.8.3",
-    "vue-html-loader": "^1.2.4",
-    "vue-loader": "^15.4.1",
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.3"
   }
