--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     ],
     "types": [
       "node",
+      "elios-sdk"
     ],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
